First Controller and Razor pages tests

--- a/SalesWebMvc/Views/Home/About.cshtml
+++ b/SalesWebMvc/Views/Home/About.cshtml
@@ -5,3 +5,10 @@
 <h3>@ViewData["Message"]</h3>
 
 <p>Use this area to provide additional information.</p>
+<p>@ViewData["Student"]</p>
+
+<address>
+    <strong>More Information: </strong>
+    <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank"> @ViewData["Email"] </a>
+</address>
+
